[package]
name = "lumber"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["logs", "log", "logstash", "log-search", "portal"]
description = "Log shipping to Portal"
repository = "https://github.com/apibillme/sawmill"
readme = "README.md"

[dependencies]
